--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -2,7 +2,7 @@
 
 
 .navbar{
-	font-family:'Lobster', cursive;
+	font-family:'Lobster', "Cursive", sans-serif;
 	color: #FFF000;
 	margin-bottom: 0px;
 }
