--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -131,7 +131,7 @@
     </div>
 
 <!-- Sidebar -->
-    <ul class="col-xs-3 col-md-2 sidebar">
+    <ul class="col-xs-3 col-md-2 sidebar-offcanvas">
       <li class="list-group-item underline"> <%= @place.loc %></li>
       <li class="list-group-item"> <strong> Types:</strong> <br><%= Place.list_tags(@place) %></li>
       <li class="list-group-item"> <%= image_tag @place.img %> </li>
