--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -198,19 +198,23 @@ ul[class="col-xs-3 col-md-2 sidebar-offcanvas"] {
 
 div.filter, div.restart {
 	width: 100%;
-	margin: none;
+	margin: 5px;
 	.filter_drop {}
 	.filter_drop {
 		padding: none;
 		font-family: "Francois One", sans-serif;
 		font-size: 1.2em;
+		line-height: 1;
 		width: 100%;
-		height: 100%;
+		height: 80%;
 		margin-top: 0px;
-		margin-bottom: 5px;
+		margin-bottom: 0px;
 	}
 }
 
+.dropdown-menu{
+	width: 220px;
+}
 .restart_li {
 	height: 84px;
 }
