updated howto page for update notes

--- a/app/views/users/howto.html.erb
+++ b/app/views/users/howto.html.erb
@@ -9,18 +9,28 @@
 			<li>The sidebar on the right will detail the information about the location suggested.</li>
 			<li>You can click on three buttons at the bottom to randamize your choices.</li>
 			<li>You can also click the filter on the left to give your intention.</li>
+
+			<li>Please press appropriately catagorize our suggested place with the buttons! - We'll try our best to read your mind! :) (though this is not an exact science)</li>
+			<li>Also please try to tell us which place seems good more often! (we can't do anything if you hate everywhere....)</li>
 			
 		</h4>
 		<br>
-		<hr>
+		<h4>
+			UPDTATE NOTES:
+			<br>
+			<li>This app is unfinished! - It can only be used for locations within Cape Town, South Africa</li>
+			<li>This app is still buggy - Please report any bugs to zyxxel123@hotmail.com </li>
+			<li>This app is has a small database - Please forgive us if places in India show up! </li>
+			<li> SORRY We haven't had time to fix these problems yet! Please bear with us!</li>
+
+
+		</h4>
 		<br>
 		<p>
 			DISCLAIMER!
 			This app should only be used for consideration only, we do not bear any responsiblity for any rage or frustration incured either direcly, or indirectly from the use of this product
 
 
-			- Please press appropriately catagorize our suggested place with the buttons! - We'll try our best to read your mind! :) (though this is not an exact science)
-			- Also please try to tell us which place seems good more often! (we can't do anything if you hate everywhere....)
 
 		</p>
 </div>
