--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -162,8 +162,9 @@ input[type=submit] {
 
 .howto{
 	width:800px ;
-	height:500px;
-	background-color: rgba(192,192,192, .4); ; 
+	height:100%;
+	/*background-color: rgba(192,192,192, .6); */
+	background-color: rgba(0,0,0, 0.6);
 	background-position: center;
 	margin: 2% auto;
 	padding: 2% 3%;
@@ -172,12 +173,17 @@ input[type=submit] {
 	border-radius: 10px; 
 	-khtml-border-radius: 10px; 
 	text-align: center;
+	color: white;
 	h1{
 		text-decoration: underline;
 		font-family: "Lobster";
 	}
 	h4{
 		text-align: left;
+		li {
+			text-align: left;
+			padding: 3px;
+		}
 	}
 	p{
 		font-size: 16px;
